k8s/otel.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-otel-lgtm-svc
spec:
  selector:
    app: blog-otel-lgtm-pod
  ports:
    - name: grafana-ui
      port: 3000
      targetPort: 3000
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-otel-lgtm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-otel-lgtm-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: blog-otel-lgtm-pod
    spec:
      containers:
        - name: grafana-lgtm
          image: "grafana/otel-lgtm:0.30.0"
          ports:
            - name: grafana-ui
              containerPort: 3000
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 5
