k8s/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-rabbitmq-svc
spec:
  type: NodePort
  selector:
    app: blog-rabbitmq-pod
  ports:
    - name: rabbitmq-port-mapping
      port: 5672
      targetPort: 5672
      protocol: TCP
    - name: rabbitmq-gui-port-mapping
      port: 15672
      targetPort: 15672
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-rabbitmq-deployment
spec:
  selector:
    matchLabels:
      app: blog-rabbitmq-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: blog-rabbitmq-pod
    spec:
      containers:
        - name: rabbitmq
          image: "rabbitmq:4-management"
          ports:
            - name: rabbitmq
              containerPort: 5672
            - name: rabbitmq-admin
              containerPort: 15672
