k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-redis-svc
spec:
  selector:
    app: blog-redis-pod
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-redis-deployment
spec:
  selector:
    matchLabels:
      app: blog-redis-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: blog-redis-pod
    spec:
      containers:
        - name: redis
          image: "redis:8-alpine"
          ports:
            - name: redis
              containerPort: 6379
